添加brand的查询接口

--- a/changgou_web/src/main/resources/application.yml
+++ b/changgou_web/src/main/resources/application.yml
@@ -16,6 +16,6 @@ mybatis:
     mapUnderscoreToCamelCase: true
 mapper:
     mappers:
-#    - shufu.tag.db.config.MyMapper
+    - com.changgou.goods.config.MyMapper
     not-empty: false
     identity: MYSQL
