--- a/changgou_web/src/main/resources/bootstrap.yml
+++ b/changgou_web/src/main/resources/bootstrap.yml
@@ -22,4 +22,23 @@ spring:
         enabled: true
         heartbeat:
           enabled: true
+    gateway:
+      routes:
+        routes:
+          ‐ id: goods
+            uri: lb://goods
+            predicates:
+            ‐ Path=/goods/**
+            filters: ‐ StripPrefix= 1
+          -‐ id: system
+            uri: lb://system
+            predicates:
+              ‐ Path=/system/**
+            filters: ‐ StripPrefix= 1
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka
+    instance:
+      prefer-ip-address: true
 
