--- a/changgou_service/pom.xml
+++ b/changgou_service/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>changgou_db</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.oschina.zcx7878</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+            <version>1.27.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
