--- a/changgou_web/src/main/resources/application.yml
+++ b/changgou_web/src/main/resources/application.yml
@@ -8,7 +8,10 @@ spring:
         #    url: jdbc:mysql://saas.database:6007/shufu_tag?allowMultiQueries=true&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&useSSL=false
         #    username: flkj
         #    password: z4QdkqfPV8APyZ7A
-
+    servlet:
+      multipart:
+          max-file-size: 10MB
+          max-request-size: 10MB
 mybatis:
     mapper-locations: classpath:mappers/*.xml
     type-aliases-package: shufu.tag.db.model
