--- a/changgou_web/src/main/resources/bootstrap.yml
+++ b/changgou_web/src/main/resources/bootstrap.yml
@@ -24,17 +24,25 @@ spring:
           enabled: true
     gateway:
       routes:
-        routes:
-          ‐ id: goods
-            uri: lb://goods
-            predicates:
-            ‐ Path=/goods/**
-            filters: ‐ StripPrefix= 1
-          -‐ id: system
-            uri: lb://system
-            predicates:
-              ‐ Path=/system/**
-            filters: ‐ StripPrefix= 1
+        ‐ id: goods
+          uri: lb://goods
+          predicates:
+          ‐ Path=/goods/**
+          filters: ‐ StripPrefix= 1
+        -‐ id: system
+          uri: lb://system
+          predicates:
+            ‐ Path=/system/**
+          filters: ‐ StripPrefix= 1
+      globalcors:
+        cors‐configurations:
+          '[/**]': # 匹配所有请求
+            allowedOrigins: "*" #跨域处理 允许所有的域
+            allowedMethods: # 支持的方法
+            ‐ GET
+            ‐ POST
+            ‐ PUT
+            ‐ DELETE
 eureka:
   client:
     service-url:
