--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.5.3</version>
+        </dependency>
     </dependencies>
 
 </project>
