--- a/changgou_common/pom.xml
+++ b/changgou_common/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>2.0.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
